--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 html {
-    background-color: pink;
+    background-image: url("/images/scrabble-243192.jpg");
 }
+
+    /*https://pixabay.com/en/scrabble-game-board-game-words-243192/*/
 
 body {
     border: 3px solid grey;
@@ -8,18 +10,26 @@ body {
     font-size: 100%;
     font-weight: normal;
     margin: 0 auto;
-    margin-top: 30px;
+    margin-top: 35px;
+    margin-bottom: 15px;
     padding: 2.5em 5em 5em 5em;
-    width: 700px;
+    width: 680px;
 }
 
 .wrapper {
     background-color: none;
-    margin: 0 10px;
+    margin: 10px 10px;
 }
 
 h1 {
+    font-size: 3em;
+    font-weight: bold;
+    margin-top: 1.1em;
     margin-bottom: 1em;
+}
+
+div .form-inputs {
+    margin-top: 60px;
 }
 
 fieldset {
@@ -28,66 +38,74 @@ fieldset {
     border: none;
 }
 
-legend {
-    display: block;
-    float: left;
-    margin: .25em 0;
-}
-
-.required {
-    font-style: italic;
-    color: grey;
-    font-size: 1em;
+legend, label {
+    font-size: 2.25em;
+    font-weight: normal;
+    margin: .2em 0;
 }
 
 #radios label, #checkboxes label {
     color: grey;
     display: block;
     font-size: 2em;
-    font-weight: normal;
+}
+
+div .text-entry {
+    margin-bottom: 3.5em;
+}
+
+#checkboxes {
+    margin-top: 3.5em;
 }
 
 input[type='text'] {
-    height: 2em;
-    width: 12em;
+    height: 2.75em;
+    margin-top: 7.5px;
+    width: 15em;
+    float: right;
+}
+
+span {
+    color: red;
+    font-size: .65em;
+    font-style: italic;
 }
 
 /*https://css-tricks.com/almanac/selectors/p/placeholder/*/
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: pink;
   font-size: 1em;
 }
 ::-moz-placeholder { /* Firefox 19+ */
-  color: pink;
   font-size: 1em;
 }
 :-ms-input-placeholder { /* IE 10+ */
-  color: pink;
   font-size: 1em;
 }
 :-moz-placeholder { /* Firefox 18- */
-  color: pink;
   font-size: 1em;
 }
 
-input[type='checkbox'], input[type='radio'], input[type='text'], #textEntry {
+input[type='checkbox'], input[type='radio'], input[type='text'] {
     font-size: 2em;
-    margin-right: .25em;
     font-weight: normal;
+    margin-right: .25em;
 }
 
-input[type='submit'],
-    margin-bottom: 10px;
+input[type='submit'], input[type='reset'] {
+    margin-top: 25px;
+    margin-right: 20px;
+    margin-bottom: 40px;
+}
 
 .alert .alert-success {
     background-color: pink;
     color: black;
-    height: 50px;
-    margin-top: 3em;
+    height: 20px;
     width: 100%;
 }
 
 p {
-    font-size: 3em;
+    font-size: 2.75em;
+    text-align: center;
 }
