--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     margin-top: 35px;
     margin-bottom: 15px;
     padding: 2.5em 5em 5em 5em;
-    width: 680px;
+    width: 625px;
 }
 
 .wrapper {
@@ -24,12 +24,18 @@ body {
 h1 {
     font-size: 3em;
     font-weight: bold;
-    margin-top: 1.1em;
+    margin-top: .75em;
     margin-bottom: 1em;
 }
 
+span:first-child {
+    color: red;
+    font-size: 1.5em;
+    font-style: normal;
+}
+
 div .form-inputs {
-    margin-top: 60px;
+    margin-top: 35px;
 }
 
 fieldset {
@@ -61,7 +67,7 @@ div .text-entry {
 input[type='text'] {
     height: 2.75em;
     margin-top: 7.5px;
-    width: 15em;
+    width: 12.5em;
     float: right;
 }
 
@@ -95,7 +101,7 @@ input[type='checkbox'], input[type='radio'], input[type='text'] {
 input[type='submit'], input[type='reset'] {
     margin-top: 25px;
     margin-right: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .alert .alert-success {
