--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,11 @@ body {
     font-size: 100%;
     font-weight: normal;
     margin: 0 auto;
-    margin-top: 5%;
+    margin-top: 2%;
     margin-bottom: 2%;
     min-width: 300px;
-    padding: 25px 10px;
+    padding: 20px 50px;
     width: 40%;
-}
-
-.wrapper {
-    margin: 15px 25px 5px 25px;
 }
 
 h1 {
@@ -90,6 +86,7 @@ p.form-control-static {
 
 /* styling for 'calculate' and 'reset' buttons */
 .btn {
+
     margin-top: 35px;
     margin-bottom: 35px;
 }
@@ -104,9 +101,31 @@ p.form-control-static {
     text-align: center;
 }
 
+/* media query for desktop */
+@media only screen and (min-device-width: 800px) {
+	body {
+        margin-top: 3%;
+        margin-bottom: 3%;
+        width: 40%;
+	}
+    .alert p {
+        font-size: 1.5em;
+    }
+}
+
+/* media query for desktop */
+@media only screen and (min-device-width: 1700px) {
+	body {
+		margin-top: 4%;
+        margin-bottom: 4%;
+        width: 30%;
+	}
+}
+
 /* media query for very large desktop */
 @media only screen and (min-device-width: 2000px) {
 	body {
 		margin-top: 5%;
+        width: 20%;
 	}
 }
