--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,15 @@ p.form-control-static {
 }
 
 /* media query for desktop */
+@media only screen and (min-device-width: 1300px) {
+	body {
+		margin-top: 3%;
+        margin-bottom: 3%;
+        width: 30%;
+	}
+}
+
+/* media query for desktop */
 @media only screen and (min-device-width: 1700px) {
 	body {
 		margin-top: 4%;
