--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ p.form-control-static {
 	body {
 		margin-top: 3%;
         margin-bottom: 3%;
-        width: 35%;
+        width: 32.5%;
 	}
 }
 
@@ -132,9 +132,10 @@ p.form-control-static {
 }
 
 /* media query for very large desktop */
-@media only screen and (min-device-width: 2000px) {
+@media only screen and (min-device-width: 2200px) {
 	body {
 		margin-top: 5%;
+        margin-bottom: 5%;
         width: 20%;
 	}
 }
