--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ p.form-control-static {
 }
 
 /* media query for desktop */
-@media only screen and (min-device-width: 800px) {
+@media only screen and (max-device-width: 800px) {
 	body {
         margin-top: 3%;
         margin-bottom: 3%;
@@ -118,7 +118,7 @@ p.form-control-static {
 	body {
 		margin-top: 3%;
         margin-bottom: 3%;
-        width: 32.5%;
+        width: 34%;
 	}
 }
 
